; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_aspeed_wdt.c_aspeed_wdt_ping.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_aspeed_wdt.c_aspeed_wdt_ping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.watchdog_device = type { i32 }
%struct.aspeed_wdt = type { i64 }

@WDT_RESTART_MAGIC = common dso_local global i32 0, align 4
@WDT_RESTART = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.watchdog_device*)* @aspeed_wdt_ping to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aspeed_wdt_ping(%struct.watchdog_device* %0) #0 {
  %2 = alloca %struct.watchdog_device*, align 8
  %3 = alloca %struct.aspeed_wdt*, align 8
  store %struct.watchdog_device* %0, %struct.watchdog_device** %2, align 8
  %4 = load %struct.watchdog_device*, %struct.watchdog_device** %2, align 8
  %5 = call %struct.aspeed_wdt* @to_aspeed_wdt(%struct.watchdog_device* %4)
  store %struct.aspeed_wdt* %5, %struct.aspeed_wdt** %3, align 8
  %6 = load i32, i32* @WDT_RESTART_MAGIC, align 4
  %7 = load %struct.aspeed_wdt*, %struct.aspeed_wdt** %3, align 8
  %8 = getelementptr inbounds %struct.aspeed_wdt, %struct.aspeed_wdt* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @WDT_RESTART, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i32 @writel(i32 %6, i64 %11)
  ret i32 0
}

declare dso_local %struct.aspeed_wdt* @to_aspeed_wdt(%struct.watchdog_device*) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
